hw05/test/zm-if-exp-not-num.fmj
public int main() {
    int[] n;
    n = new int[3];
    if (n) { // error
        
    }
    return n;
}
